# OneShot

./: .gitignore  AGENTS.md  OneShot.slnx  README.md
.codex/: config.toml
OneShot/: App.axaml  App.axaml.cs  OneShot.csproj  Program.cs  app.manifest
OneShot.Tests/: AppLaunchBootstrapTests.cs  GlobalUsings.cs  MarkupImageExportServiceTests.cs  MultiMonitorSelectionSessionTests.cs  NamedPipeCommandTests.cs  NotificationPlacementTests.cs  OneShot.Tests.csproj  OutputServiceTests.cs  ScreenCaptureServiceTests.cs  SelectionGeometryTests.cs  SelectionOverlayPoolTests.cs  SnapshotCoordinatorTests.cs
installer/: BuildSupport.ps1  OneShot.Native.wxs  OneShot.wxs  build-elixir-msi.ps1  (+4 more)
oneshot_native/: CMakeLists.txt
oneshot_native/include/oneshot_native/: AppHost.h  CaptureService.h  CaptureTypes.h  CommandClient.h  CommandProtocol.h  CommandServer.h  Common.h  DiagnosticsService.h  DragDropService.h  MarkupEditorSettingsStore.h  MarkupEditorWindow.h  NotificationManager.h  NotificationPlacement.h  NotificationSettingsStore.h  OutputService.h  OverlayManager.h  PathService.h  StartupService.h  TempFileManager.h  TrayController.h  UiTheme.h
oneshot_native/src/: AppHost.cpp  CaptureService.cpp  CommandClient.cpp  CommandProtocol.cpp  CommandServer.cpp  DiagnosticsService.cpp  DragDropService.cpp  MarkupEditorSettingsStore.cpp  MarkupEditorWindow.cpp  NotificationManager.cpp  NotificationPlacement.cpp  NotificationSettingsStore.cpp  OutputService.cpp  OverlayManager.cpp  PathService.cpp  StartupService.cpp  TempFileManager.cpp  TrayController.cpp  UiTheme.cpp  main.cpp
(+101 files in other folders)
